# Youtube-history

./: .gitignore  README.md  channel-blacklist.txt  channel-whitelist.txt  config.toml  development.ipynb  keyword-blacklist.txt  keyword-whitelist.txt  pyproject.toml  run.bat  scrublist.txt
.github/workflows/: test.yml-NOTUSED
src/tests/: test_credentials.py  test_main.py
src/youtube_history/: Gotify.py  __init__.py  cli_app.py  main.py
