[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "youtube_history"
requires-python = ">=3.11.0"
authors = [{name = "Arun Kishore", email = "pypi@rpakishore.co.in"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "typer[all]",   #cli_app.py
    "icecream",     
    "slack_sdk",    #Slack.py
    "keyring",   #credentials.py
    "ak_selenium==0.1.5"
]

[project.optional-dependencies]
test = [
    "pytest",
    "ipykernel"
]

[project.urls]
Home = "https://github.com/rpakishore/Youtube-history"

[project.scripts]
app="youtube_history.cli_app:app"